# onboard

./: .coverage.onboard.7111.XFXYSZwx  .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.alpine  Makefile  README.md  app.py  docker-compose.override.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  test_indentation.py  utils.py
.devcontainer/: Dockerfile  Makefile  devcontainer.json  requirements.txt  setup-dotfiles.sh
.devcontainer/ansible/: install-docker.yml  setup-container.yml
.devcontainer/entrypoint.d/: 01-dotfiles-setup.sh  15-gpu-setup.sh  20-project-setup.sh
.devplanning/: README.md  TEST_SEAM.md  commit_tasks.md  feature_plan.md  prompting_prompts.md
.devplanning/add_testing/: plan.md
.devplanning/audit/: findings.md
.devplanning/bookmark-editing/: technical-design.md  ui-mockups.md
.devplanning/bookmarks-consolidation/: IMPLEMENTATION-COMPLETE.md  PRD.md  implementation-checklist.md  technical-design.md
.devplanning/bookmarks-management/: PRD.md  api-design.md  technical-design.md  ui-flows.md
.devplanning/bookmarks-management-ui/: PRD.md  implementation-checklist.md
.devplanning/feature-feed-cache/: PLAN.md
.devplanning/htmx-enhancements/: README.md  enhancement-plan.md  implementation-guide.md  testing-strategy.md
.devplanning/htmx-upgrade/: implementation-guide.md  upgrade-plan.md
.devplanning/instruction-metrics/: instruction_metrics_setup.prompt.md  tracking_improvements.md
.devplanning/prompt-automation-feature/: README.md  feature-spec.md  implementation-plan.md  original-prompt-integration.md  validation.md  workflow-documentation.md
.devplanning/prompt-improvements-2025-09-14/: README.md  determined-issues.md  tracking_improvements.md
.github/: VERSION  copilot-instructions.md
.github/instructions/: VERSION  copilot_chatmodes.instructions.md  copilot_customization.instructions.md  copilot_prompts.instructions.md  devcontainer.instructions.md  dockerfile.instructions.md  ignore-files.instructions.md  makefile.instructions.md  mcp_services.instructions.md  python.instructions.md  taming-copilot.instructions.md  testing.instructions.md
.github/prompts/: check.prompt.md  commit.prompt.md  coverage_improvement.prompt.md  coverage_improvement_claude.prompt.md  coverage_improvement_gpt5.prompt.md  dead_code.prompt.md  lint.prompt.md  test.prompt.md  update-instructions.prompt.md  update-make-prompts.prompt.md
.github/workflows/: docker-publish.yml
.spec/: prompting_prompts.md
api/: interest_map.py  recommendations.py
app/: app.py  docker.py  docker_app.py  factory.py  file_data.py  layout.py  main.py  post_processor.py  pyproject.toml  rss.py  rss_article.py  rss_feed.py  rss_feed_manager.py  rssfilters.ipynb  startup.py  tmpctn6v50d.json  tmpn9e69du3.json  tmpphmfqd7a.json  tmpsi32vwhz.json  tmpt8uii5mq.json  tmpzv1muwos.json  utils.py  vulture_whitelist.py  yaml_parser.py
app/api/: __init__.py  bookmarks.py
app/archive/: layout.py  rss.py  rss_feed.py  rss_feed_manager.py
app/configs/: bookmarks.yml  layout.yml  tracking.db
app/defaults/: bookmarks.json  bookmarks.yml  bookmarks_bar.json  layout.yml
app/models/: Bookmark.py  apscheduler.py  apscheduler_scheduler.py  bookmark.py  bookmark_api.py  bookmarks.py  column.py  exceptions.py  feed.py  feed_article.py  feed_cache.py  file_store.py  iframe.py  layout.py  local_file_store.py  noop_feed_processor.py  row.py  scheduler.py  scheduler_interface.py  scheduler_widget.py  tab.py  utils.py  widget.py  widget_item.py
app/modules/: testsupport.py
app/processors/: cafe_hayek.py  instapundit.py  strip_long_urls.py  test_processor.py  title_editor.py
app/services/: bookmark_bar_manager.py  bookmark_manager.py  bookmarks_migrator.py  docker_app.py  favicon_finder.py  favicon_retriever.py  favicon_store.py  favicon_utils.py  link_tracker.py  redis_store.py
app/static/: testing.html
app/static/css/: bookmark_bar.css  footer.css  header.css  iframe.css  index.css  layout.css  links.css  loading-states.css  tabs.css  widgets.css
app/static/js/: script.js
app/templates/: alpine.test.html  bookmark_bar.html  bookmarks_manager.html  docker.html  docker_containers.html  docker_events.html  flowbite.test.html  iframe.html  index.html  layout_test.html  onboard-grid-test.html  recommendations_widget.html  row.html  tab_content.html  test.html  widget.html
base/: Gemfile  Guardfile
base/config/: application.rb  credentials.yml.enc
base/spec/: spec_helper.rb
configs/: bookmarks.yml  feeds.yml
data/: onboard.db  schema.sql
data/chroma/: chroma.sqlite3
jobs/: ctr_updater.py  decay_sweep.py  embed_refresher.py
notebooks/: ai_prompt.ipynb  bookmark-output.ipynb  bookmark-processing-1.ipynb  datetime_work.ipynb  generate_and_store_embeddings.ipynb  history.ipynb  layout.ipynb  new_layout.ipynb  notebook.ipynb  openrouter.ipynb  pyproject.toml  text_analysis-4.11.24.PM.ipynb  text_analysis-4.8.24.ipynb  text_analysis-4.9.24.PM.ipynb  text_analysis-4.9.24.ipynb  u.ipynb  youtube_watch_history_export-2.ipynb  youtube_watch_history_export.ipynb
notebooks/notes/: bookmarks.html  bookmarks_no_icons.html  claude.notes.txt  freshstart.xml
onboard/: __init__.py
onboard/api/: __init__.py  feedback.py  recommendations.py
onboard/jobs/: __init__.py  ctr_updater.py  decay_sweep.py  discover.py  embed_refresher.py  hydrate_clicked_items.py  ingest_bookmarks.py  prune_topics.py  seed_topics_from_bookmarks.py  sync_clicks.py  topics_backfill.py  (+1 more)
processors/: __init__.py  test_processor.py
scripts/: debug_feed_cache.py  migrate_bookmarks.py  run_feed_update.py  run_selenium_and_test.sh  smoke_test_prod_image.sh  take_screenshot.py
services/: __init__.py  embedding_service.py  interest_map.py  ranking.py  text_extractor.py  vector_store.py
templates/: index.html
tests/: conftest.py  test_bookmark_seeding.py  test_cosine_norm.py  test_decay_math.py  test_factory.py  test_ranking_integration.py  test_startup.py  test_startup_archive.py  test_text_extractor_fallback.py  test_vector_store_adapter.py
utils/: bookmarks.py  db.py  layout.py
(+109 files in other folders)
