[project]
name = "onboard"
version = "0.1.0"
requires-python = ">=3.12"
description = "Flask/Python project using UV for dependency management"
authors = [{ name = "Mike Glenn", email = "mglenn@ilude.com" }]
dependencies = [
    "aiohttp[speedups]",
    "argcomplete",
    "apscheduler",
    "bs4",
    "cssmin",
    "docker",
    "feedparser",
    "flask",
    "flask[async]",
    "flask-admin",
    "flask-assets",
    "flask-bcrypt",
    "flask-caching",
    "flask-minify",
    "flask-minify[go]",
    "flask-sqlalchemy",
    "gunicorn",
    "hypercorn==0.15.0",
    "langchain",
    "langchain-community",
    "lxml==5.1.1",
    "pandas",
    "pillow",
    "python-dateutil",
    "python-dotenv",
    "pyyaml",
    "redis",
    "requests",
    "unidecode",
    "url-normalize",
    "w3lib"
]

[tool.setuptools]
py-modules = ["run"]

[build-system]
requires = ["setuptools>=45", "wheel", "uv"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "behave",
    "black==23.12.1",
    "bottleneck>=1.5.0",
    "docutils>=0.22",
    "duckdb>=1.3.2",
    "gensim>=4.3.2",
    "graphviz>=0.21",
    "h5py>=3.14.0",
    "imutils>=0.5.4",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "isort==5.13.2",
    "jupyter>=1.1.1",
    "jupyterhub>=5.3.0",
    "keras>=3.11.2",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "notebook>=7.4.5",
    "numpy>=2.1.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.3.0",
    "pyautogui>=0.9.54",
    "pylint>=3.3.8",
    "pyyaml>=6.0.2",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-flask==1.3.0",
    "requests-cache>=1.2.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "statsmodels>=0.14.5",
    "tensorflow>=2.19.0",
    "torch>=2.8.0",
    "watermark>=2.5.0",
    "flake8==7.0.0",
]
