[project]
name = "onboard"
version = "0.1.0"
requires-python = ">=3.12, <=3.13"
description = "Onboard Flask application package"
authors = [{ name = "Mike Glenn", email = "mglenn@ilude.com" }]
dependencies = [
    "apscheduler",
    "bs4",
    "docker",
    "feedparser",
    "flask",
    "flask[async]",
    "flask-assets",
    "flask-caching",
    "flask-minify",
    "flask-minify[go]",
    "gunicorn",
    "hypercorn==0.15.0",
    "langchain",
    "langchain-community",
    "langchain_core",
    "pandas",
    "python-dateutil",
    "python-dotenv",
    "pyyaml",
    "requests",
    "unidecode",
    "cssmin>=0.2.0",
]

[build-system]
requires = ["setuptools>=45", "wheel", "uv"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
package-dir = { "app" = "." }
